--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 :root {
 	--primary: #ddd;
 	--dark: #333;
+	--highlight: #d8a724;
 	--light: #fff;
-	--shadow: 0 1px 5px rgba(104,104,104,0.8);
+	--shadow: 0 1px 5px rgba(142, 142, 142, 0.8);
 }
 
 html{
@@ -13,7 +14,7 @@ html{
 
 body{
 	background: #ccc;
-	margin: 40px 100px;
+	margin: 40px 25px;
 	line-height: 1.3;
 }
 .btn{
@@ -22,6 +23,23 @@ body{
 	text-decoration: none;
 	border: 0;
 	line-height: 2;
+	box-shadow: var(--shadow);
+	font-size: 1.5rem
+}
+
+.btn-primary{
+	background-color: var(--highlight);
+	color: var(--dark);
+}
+
+.btn-secondary{
+	background-color: var(--dark);
+	color: var(--primary);
+}
+
+.btn-secondary:hover {
+	background-color: var(--highlight);
+	color: green;
 }
 
 .btn:hover {
@@ -38,32 +56,106 @@ img{
 }
 
 /*Main Nav*/
-.mainNav{
+.mainNav ul{
 	display: grid;
 	grid-gap: 20px;
 	padding: 0;
 	list-style: none;
-	grid-template-columns: repeat(4,1fr;)
+	grid-template-columns: repeat(5,1fr);
+	align-items: center;
 }
 
 .mainNav a{
 	display: block;
+	font-size: 1.5rem;
 	text-decoration: none;
 	text-transform: uppercase;
 	text-align: center;
 }
 
+.mainNav a:hover{
+	color: var(--highlight);
+	font-size: 2rem;
+	transition: font-size 1s;
+	
+	
+}
+/*WELCOME BOX*/
 .welcome {
 	display: grid;
 	grid: 20px;
 	grid-template-areas: 
-		'intro' 'sideGraphic';
+		'intro';
 		
 }
+
 .intro{
 	grid-area: intro;
+	height: 600px;
+	background: url(https://source.unsplash.com/random/1200x600);
+	background-blend-mode: lighten;
+	text-align: center;
+	
 }
 
-.sideGraphic{
-	grid-area: sideGraphic;
+
+.intro h1 {
+	color: var(--light);
+	font-size: 4.0rem;
+	padding-bottom: .5rem;
+	
+}
+
+.intro p {
+	color: var(--light);
+	font-size: 2.0rem;
+}
+
+
+/*MAIN CONTENT*/
+.main{
+	background: var(--primary);
+	padding: 50px;
+}
+
+/*SKill BOxes*/
+
+.skillBoxes{
+	padding-top: 100px;
+	display: grid;
+	grid-gap: 20px;
+	grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr));
+	background: var(--dark);
+	color: var(--primary);
+}
+
+.card{
+	padding: 20px;
+	text-align: center;
+}
+
+h3{
+	color: var(--light);
+	letter-spacing: .3rem;
+	text-shadow: var(--shadow);
+	
+}
+
+.fa-4x {
+	color: var(--highlight);
+}
+
+/*Footer*/
+
+footer{
+	text-align: center;
+	color: var(--light);
+}
+
+.social .fa-4x{
+	color: var(--dark);
+}
+.social h2{
+	letter-spacing: .2rem;
+	color: var(--light);
 }
