--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 	--dark: #333;
 	--highlight: #d8a724;
 	--light: #fff;
-	--shadow: 0 1px 5px rgba(142, 142, 142, 0.8);
+	--shadow: 0px 5px 2px rgba(180, 180, 180, 1);
 }
 
 html{
@@ -17,6 +17,7 @@ body{
 	margin: 40px 25px;
 	line-height: 1.3;
 }
+
 .btn{
 	background-color: var(--light);
 	padding: 0.6rem 1.3rem;
@@ -52,13 +53,13 @@ img{
 
 .wrapper{
 	display: grid;
-	grid-gap: 30px;
+	
 }
 
 /*Main Nav*/
 .mainNav ul{
 	display: grid;
-	grid-gap: 20px;
+	grid-gap: 10px;
 	padding: 0;
 	list-style: none;
 	grid-template-columns: repeat(5,1fr);
@@ -92,7 +93,8 @@ img{
 .intro{
 	grid-area: intro;
 	height: 600px;
-	background: url(https://source.unsplash.com/random/1200x600);
+	background: url(/ims/headerGraphic.jpeg);
+	background-position: center;
 	background-blend-mode: lighten;
 	text-align: center;
 	
@@ -115,18 +117,49 @@ img{
 /*MAIN CONTENT*/
 .main{
 	background: var(--primary);
-	padding: 50px;
+	padding:  0 150px;
+
+}
+
+.mainContent{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	padding-bottom: 50px;
+}
+
+.main::before {
+	position: absolute;
+	right: 50%;
+	content: "";
+	width: 150px;
+	height: 150px;
+	background: var(--primary);
+	z-index: 1;
+	transform: rotate(45deg);
+	bottom: -370px;
 }
 
 /*SKill BOxes*/
 
 .skillBoxes{
-	padding-top: 100px;
+	padding-top: 150px;
 	display: grid;
 	grid-gap: 20px;
 	grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr));
 	background: var(--dark);
 	color: var(--primary);
+}
+
+.skillBoxes::after {
+	position: absolute;
+	right: 50%;
+	content: "";
+	width: 150px;
+	height: 150px;
+	background: var(--dark);
+	z-index: 1;
+	transform: rotate(45deg);
+	bottom: -1000px;
 }
 
 .card{
@@ -135,10 +168,12 @@ img{
 }
 
 h3{
-	color: var(--light);
-	letter-spacing: .3rem;
+	text-align: center;
+	font-size: 1.9rem;
+	letter-spacing: .2rem;
+	color: var(--highlight);
 	text-shadow: var(--shadow);
-	
+
 }
 
 .fa-4x {
@@ -148,14 +183,17 @@ h3{
 /*Footer*/
 
 footer{
+	padding-top: 50px;
 	text-align: center;
 	color: var(--light);
 }
 
 .social .fa-4x{
 	color: var(--dark);
+	box-shadow: var(--shadow);
 }
-.social h2{
-	letter-spacing: .2rem;
+h2{
 	color: var(--light);
+	letter-spacing: .3rem;
+
 }
