--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ img{
 
 .wrapper{
 	display: grid;
-	
+
 }
 
 /*Main Nav*/
@@ -77,27 +77,27 @@ img{
 .mainNav a:hover{
 	color: var(--highlight);
 	font-size: 2rem;
-	transition: font-size 1s;
-	
-	
+	transition: font-size 350ms;
+
+
 }
 /*WELCOME BOX*/
 .welcome {
 	display: grid;
-	grid: 20px;
-	grid-template-areas: 
-		'intro';
-		
+
+	grid-template-areas:
+		'intro intro wakaTime';
 }
 
 .intro{
 	grid-area: intro;
-	height: 600px;
+	width: 95%;
+	min-height: : 300px;
+
 	background: url(/ims/headerGraphic.jpeg);
 	background-position: center;
 	background-blend-mode: lighten;
 	text-align: center;
-	
 }
 
 
@@ -105,7 +105,6 @@ img{
 	color: var(--light);
 	font-size: 4.0rem;
 	padding-bottom: .5rem;
-	
 }
 
 .intro p {
@@ -113,6 +112,13 @@ img{
 	font-size: 2.0rem;
 }
 
+/* Waka Time */
+.wakaTime{
+	grid-area: wakaTime;
+	text-align: center;
+
+
+}
 
 /*MAIN CONTENT*/
 .main{
@@ -127,7 +133,7 @@ img{
 	padding-bottom: 50px;
 }
 
-.main::before {
+/* .main::before {
 	position: absolute;
 	right: 50%;
 	content: "";
@@ -136,8 +142,8 @@ img{
 	background: var(--primary);
 	z-index: 1;
 	transform: rotate(45deg);
-	bottom: -370px;
-}
+	bottom: -320px;
+} */
 
 /*SKill BOxes*/
 
@@ -150,7 +156,7 @@ img{
 	color: var(--primary);
 }
 
-.skillBoxes::after {
+/* .skillBoxes::after {
 	position: absolute;
 	right: 50%;
 	content: "";
@@ -159,8 +165,8 @@ img{
 	background: var(--dark);
 	z-index: 1;
 	transform: rotate(45deg);
-	bottom: -1000px;
-}
+	bottom: -950px;
+} */
 
 .card{
 	padding: 20px;
