--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
 	--dark: #333;
 	--highlight: #d8a724;
 	--light: #fff;
-	--shadow: 0px 5px 2px rgba(180, 180, 180, 1);
+	--shadow: 10px 10px 5px -6px rgba(189,189,189,1);
+
 }
 
 html{
@@ -47,13 +48,13 @@ body{
 	background-color: var(--dark);
 	color: var(--light);
 }
-img{
+img {
 	max-width: 100%;
 }
 
 .wrapper{
 	display: grid;
-
+	grid-gap: 20px;
 }
 
 /*Main Nav*/
@@ -84,16 +85,17 @@ img{
 /*WELCOME BOX*/
 .welcome {
 	display: grid;
-
+	grid-gap: 20px;
+	/* grid-template-columns: 70% 30%; */
 	grid-template-areas:
 		'intro intro wakaTime';
 }
 
 .intro{
 	grid-area: intro;
-	width: 95%;
 	min-height: : 300px;
 
+	box-shadow: var(--shadow);
 	background: url(/ims/headerGraphic.jpeg);
 	background-position: center;
 	background-blend-mode: lighten;
@@ -115,8 +117,18 @@ img{
 /* Waka Time */
 .wakaTime{
 	grid-area: wakaTime;
+	align-items: center;
 	text-align: center;
+	box-shadow: var(--shadow);
 
+}
+.wakaTime p {
+	color: var(--primary);
+	font-size: 1.5rem;
+}
+.wakaTime img {
+	width: 75%;
+	padding-bottom: 30px;
 
 }
 
@@ -148,12 +160,16 @@ img{
 /*SKill BOxes*/
 
 .skillBoxes{
-	padding-top: 150px;
+	margin: 40px 225px;
+	align-items: center;
+	padding-top: 100px;
 	display: grid;
-	grid-gap: 20px;
+	grid-gap: 100px;
+	box-shadow: 10px 10px 5px -6px var(--highlight);
 	grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr));
 	background: var(--dark);
 	color: var(--primary);
+
 }
 
 /* .skillBoxes::after {
@@ -169,7 +185,7 @@ img{
 } */
 
 .card{
-	padding: 20px;
+	/* padding: 20px; */
 	text-align: center;
 }
 
