--- a/css/styles.css
+++ b/css/styles.css
@@ -1,148 +1,152 @@
 :root {
-	--primary: #ddd;
-	--dark: #333;
-	--highlight: #d8a724;
-	--light: #fff;
-	--shadow: 10px 10px 5px -6px rgba(189,189,189,1);
-
+  --primary: #ddd;
+  --dark: #333;
+  --highlight: #d8a724;
+  --light: #fff;
+  --shadow: 10px 10px 5px -6px rgba(189, 189, 189, 1);
+  --darkShadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.75);
 }
 
-html{
-	box-sizing: border-box;
-	font-family: fantasy, helvetica, sans-serif;
-	color: var(--dark);
+html {
+  box-sizing: border-box;
+  font-family: fantasy, helvetica, sans-serif;
+  color: var(--dark);
 }
 
-body{
-	background: #ccc;
-	margin: 40px 25px;
-	line-height: 1.3;
+body {
+  background: #ccc;
+  margin: 40px 25px;
+  line-height: 1.5;
 }
 
-.btn{
-	background-color: var(--light);
-	padding: 0.6rem 1.3rem;
-	text-decoration: none;
-	border: 0;
-	line-height: 2;
-	box-shadow: var(--shadow);
-	font-size: 1.5rem
+p {
+  font-size: .9rem;
 }
 
-.btn-primary{
-	background-color: var(--highlight);
-	color: var(--dark);
+.btn {
+  background-color: var(--light);
+  padding: 0.6rem 1rem;
+  text-decoration: none;
+  border: 0;
+  line-height: 3;
+  font-size: 1.2rem
 }
 
-.btn-secondary{
-	background-color: var(--dark);
-	color: var(--primary);
+.btn-primary {
+  background-color: var(--highlight);
+  color: var(--dark);
+}
+
+.btn-secondary {
+  background-color: var(--dark);
+  color: var(--primary);
 }
 
 .btn-secondary:hover {
-	background-color: var(--highlight);
-	color: green;
+  background-color: var(--highlight);
+  color: green;
 }
 
 .btn:hover {
-	background-color: var(--dark);
-	color: var(--light);
-}
-img {
-	max-width: 100%;
+  background-color: var(--dark);
+  color: var(--light);
 }
 
-.wrapper{
-	display: grid;
-	grid-gap: 20px;
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  display: grid;
 }
 
 /*Main Nav*/
-.mainNav ul{
-	display: grid;
-	grid-gap: 10px;
-	padding: 0;
-	list-style: none;
-	grid-template-columns: repeat(5,1fr);
-	align-items: center;
+
+.mainNav ul {
+  display: grid;
+  grid-gap: 10px;
+  padding: 0;
+  list-style: none;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
 }
 
-.mainNav a{
-	display: block;
-	font-size: 1.5rem;
-	text-decoration: none;
-	text-transform: uppercase;
-	text-align: center;
+.mainNav a {
+  display: block;
+  font-size: 1.5rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
 }
 
-.mainNav a:hover{
-	color: var(--highlight);
-	font-size: 2rem;
-	transition: font-size 350ms;
-
-
+.mainNav a:hover {
+  color: var(--highlight);
+  font-size: 2rem;
+  transition: font-size 350ms;
 }
+
 /*WELCOME BOX*/
+
 .welcome {
-	display: grid;
-	grid-gap: 20px;
-	/* grid-template-columns: 70% 30%; */
-	grid-template-areas:
-		'intro intro wakaTime';
+  display: grid;
+  grid-gap: 20px;
+  box-shadow: var(--shadow);
+  /* grid-template-columns: 70% 30%; */
+  /* grid-template-areas:
+		'intro intro wakaTime'; */
 }
 
-.intro{
-	grid-area: intro;
-	min-height: : 300px;
-
-	box-shadow: var(--shadow);
-	background: url(/ims/headerGraphic.jpeg);
-	background-position: center;
-	background-blend-mode: lighten;
-	text-align: center;
+.intro {
+  /* grid-area: intro; */
+  width: 100%;
+  min-height: : 300px;
+  box-shadow: var(--shadow);
+  background: url(/ims/headerGraphic.jpeg);
+  background-position: center;
+  text-align: center;
 }
-
 
 .intro h1 {
-	color: var(--light);
-	font-size: 4.0rem;
-	padding-bottom: .5rem;
+  color: var(--light);
+  font-size: 4.0rem;
+  padding-bottom: .5rem;
 }
 
 .intro p {
-	color: var(--light);
-	font-size: 2.0rem;
+  color: var(--light);
+  font-size: 1.5rem;
 }
 
 /* Waka Time */
-.wakaTime{
-	grid-area: wakaTime;
-	align-items: center;
-	text-align: center;
-	box-shadow: var(--shadow);
 
+.wakaTime {
+  /* grid-area: wakaTime; */
+  align-items: center;
+  text-align: center;
 }
+
 .wakaTime p {
-	color: var(--primary);
-	font-size: 1.5rem;
+  color: var(--highlight);
+  font-size: 1.5rem;
 }
-.wakaTime img {
-	width: 75%;
-	padding-bottom: 30px;
 
+.wakaTime img {
+  width: 95%;
 }
 
 /*MAIN CONTENT*/
-.main{
-	background: var(--primary);
-	padding:  0 150px;
-
+/* TODO: Sort out section contents */
+.main {
+  background: var(--primary);
+  padding: 0 50px;
+  box-shadow: var(--shadow);
 }
 
-.mainContent{
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	padding-bottom: 50px;
+.mainContent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+	align-items: center;
+  padding-bottom: 50px;
 }
 
 /* .main::before {
@@ -159,17 +163,16 @@ img {
 
 /*SKill BOxes*/
 
-.skillBoxes{
-	margin: 40px 225px;
-	align-items: center;
-	padding-top: 100px;
-	display: grid;
-	grid-gap: 100px;
-	box-shadow: 10px 10px 5px -6px var(--highlight);
-	grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr));
-	background: var(--dark);
-	color: var(--primary);
-
+.skillBoxes {
+  margin: 0px 100px;
+  align-items: center;
+  padding: 50px 25px;
+  display: grid;
+  grid-gap: 100px;
+  box-shadow: var(--darkShadow);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  background: var(--dark);
+  color: var(--primary);
 }
 
 /* .skillBoxes::after {
@@ -184,38 +187,49 @@ img {
 	bottom: -950px;
 } */
 
-.card{
-	/* padding: 20px; */
-	text-align: center;
+.card {
+  /* padding: 20px; */
+  text-align: center;
 }
 
-h3{
-	text-align: center;
-	font-size: 1.9rem;
-	letter-spacing: .2rem;
-	color: var(--highlight);
-	text-shadow: var(--shadow);
-
+h3 {
+  text-align: center;
+  font-size: 1.9rem;
+  letter-spacing: .2rem;
+  color: var(--highlight);
+  text-shadow: var(--shadow);
 }
 
 .fa-4x {
-	color: var(--highlight);
+  color: var(--highlight);
 }
 
 /*Footer*/
 
-footer{
-	padding-top: 50px;
-	text-align: center;
-	color: var(--light);
+footer {
+  background-color: var(--dark);
+  padding-top: 1rem;
+  text-align: center;
+  color: var(--light);
+  box-shadow: var(--darkShadow);
 }
 
-.social .fa-4x{
-	color: var(--dark);
-	box-shadow: var(--shadow);
+.icons {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  padding-bottom: 1.5rem;
 }
-h2{
-	color: var(--light);
-	letter-spacing: .3rem;
 
+.social h3 {
+  color: var(--light);
+}
+
+.social .fa-4x {
+  color: var(--highlight);
+  box-shadow: var(--darkShadow);
+}
+
+h2 {
+  color: var(--light);
+  letter-spacing: .3rem;
 }
