--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --primary: #ddd;
+  --secondary: #393939;
   --dark: #333;
   --highlight: #d8a724;
   --light: #fff;
@@ -58,10 +59,13 @@ img {
 
 .wrapper {
   display: grid;
+
 }
 
 /*Main Nav*/
-
+.mainNav{
+  background-color: var(--primary);
+}
 .mainNav ul {
   display: grid;
   grid-gap: 10px;
@@ -86,22 +90,17 @@ img {
 }
 
 /*WELCOME BOX*/
-
 .welcome {
   display: grid;
   grid-gap: 20px;
   box-shadow: var(--shadow);
-  /* grid-template-columns: 70% 30%; */
-  /* grid-template-areas:
-		'intro intro wakaTime'; */
 }
 
 .intro {
-  /* grid-area: intro; */
   width: 100%;
-  min-height: : 300px;
+  height:  700px;
   box-shadow: var(--shadow);
-  background: url(/ims/headerGraphic.jpeg);
+  background: url(../ims/headerGraphic.jpeg);
   background-position: center;
   text-align: center;
 }
@@ -109,7 +108,7 @@ img {
 .intro h1 {
   color: var(--light);
   font-size: 4.0rem;
-  padding-bottom: .5rem;
+  padding-bottom: 9.5rem;
 }
 
 .intro p {
@@ -118,9 +117,10 @@ img {
 }
 
 /* Waka Time */
-
 .wakaTime {
-  /* grid-area: wakaTime; */
+  max-height: 100%;
+  background-color: var(--secondary);
+  box-shadow: var(--darkShadow);
   align-items: center;
   text-align: center;
 }
@@ -131,64 +131,44 @@ img {
 }
 
 .wakaTime img {
-  width: 95%;
+  width: 90%;
+  max-width: 50%;
+  padding-bottom: 5rem;
 }
 
 /*MAIN CONTENT*/
 /* TODO: Sort out section contents */
 .main {
   background: var(--primary);
-  padding: 0 50px;
+  /* padding: 0 50px; */
   box-shadow: var(--shadow);
 }
 
 .mainContent {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 	align-items: center;
   padding-bottom: 50px;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
-
-/* .main::before {
-	position: absolute;
-	right: 50%;
-	content: "";
-	width: 150px;
-	height: 150px;
-	background: var(--primary);
-	z-index: 1;
-	transform: rotate(45deg);
-	bottom: -320px;
-} */
 
 /*SKill BOxes*/
 
 .skillBoxes {
-  margin: 0px 100px;
   align-items: center;
-  padding: 50px 25px;
+  padding: 50px 50px;
   display: grid;
-  grid-gap: 100px;
+  grid-gap: 20px;
   box-shadow: var(--darkShadow);
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   background: var(--dark);
   color: var(--primary);
 }
 
-/* .skillBoxes::after {
-	position: absolute;
-	right: 50%;
-	content: "";
-	width: 150px;
-	height: 150px;
-	background: var(--dark);
-	z-index: 1;
-	transform: rotate(45deg);
-	bottom: -950px;
-} */
-
 .card {
   /* padding: 20px; */
+  padding-top: 2rem;
   text-align: center;
 }
 
@@ -207,7 +187,7 @@ h3 {
 /*Footer*/
 
 footer {
-  background-color: var(--dark);
+  background-color: var(--secondary);
   padding-top: 1rem;
   text-align: center;
   color: var(--light);
